force-app/main/default/objects/Customer__c/fields/Antenna_Azimuth__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Azimuth__c</fullName>
    <label>Antenna Azimuth</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>