force-app/main/default/objects/Customer__c/fields/Antenna_Centerline__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Centerline__c</fullName>
    <label>Antenna Centerline</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>