force-app/main/default/objects/Customer__c/fields/Antenna_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Dimensions__c</fullName>
    <label>Antenna Dimensions</label>
    <length>16</length>
    <type>Text</type>
</CustomField>