force-app/main/default/objects/Customer__c/fields/Antenna_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Quantity__c</fullName>
    <label>Antenna Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>