force-app/main/default/objects/Customer__c/fields/Antenna_Weight__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Weight__c</fullName>
    <label>Antenna Weight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>