force-app/main/default/objects/Customer__c/fields/Centerline__c.field-meta.xml
<CustomField>
    <fullName>Centerline__c</fullName>
    <label>Centerline</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>