force-app/main/default/objects/Customer__c/fields/Current_Load__c.field-meta.xml
<CustomField>
    <fullName>Current_Load__c</fullName>
    <label>Current Load</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>