force-app/main/default/objects/Customer__c/fields/Current_Vertical_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Current_Vertical_Spacing__c</fullName>
    <label>Current Vertical Spacing</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>