force-app/main/default/objects/Customer__c/fields/Customer_1_Attachement_type_ie_antenna__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Attachement_type_ie_antenna__c</fullName>
    <label>Customer 1 Attachement type (ie antenna</label>
    <length>30</length>
    <type>Text</type>
</CustomField>