force-app/main/default/objects/Customer__c/fields/Line_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Line_Quantity__c</fullName>
    <label>Line Quantity</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>