force-app/main/default/objects/Customer__c/fields/Line_size__c.field-meta.xml
<CustomField>
    <fullName>Line_size__c</fullName>
    <label>Line size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>