force-app/main/default/objects/Customer__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <label>Line Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>