force-app/main/default/objects/Customer__c/fields/Mount_type__c.field-meta.xml
<CustomField>
    <fullName>Mount_type__c</fullName>
    <label>Mount type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>