force-app/main/default/objects/Customer__c/fields/Other_attachments__c.field-meta.xml
<CustomField>
    <fullName>Other_attachments__c</fullName>
    <label>Other attachments</label>
    <type>TextArea</type>
</CustomField>