force-app/main/default/objects/Customer__c/fields/Reserve_Loading__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Loading__c</fullName>
    <label>Reserve Loading</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>