force-app/main/default/objects/Customer__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <referenceTo>strk__Site__c</referenceTo>
    <relationshipLabel>Customer</relationshipLabel>
    <relationshipName>Customer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>