force-app/main/default/objects/Customer__c/fields/Vertical_Reserve_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Reserve_Spacing__c</fullName>
    <label>Vertical Reserve Spacing</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>